[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "st-newsapi-connection"
version = "0.1.0"
description = "A Python package to query data from NewsAPI in Streamlit apps"
authors = [
    {name = "D. Carpintero"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.0"
dependencies = ["streamlit >= 1.22.0"]