[tool.poetry]
name = "st-newsapi-connector"
version = "0.1.5"
description = "A Python package to query data from NewsAPI in Streamlit apps"
authors = ["D. Carpintero"]
license = "MIT"
readme = "README.md"
homepage = "https://st-newsapi-connector.streamlit.app/"
repository = "https://github.com/dcarpintero/st-newsapi-connector"

[tool.poetry.dependencies]
python = "3.8"
pandas = "1.5.1"
pycountry = "22.3.5"
requests = "2.31.0"
streamlit = "1.25.0"

[tool.poetry.dev-dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

